children and parent article added
